# dl_homework

./: .gitignore  7.lstm_v2.rar  MANIFEST.in  README.md  pyproject.toml  setup.py
1.softmax/: 1.softmax.ipynb
1.softmax/original/: 1.softmax copy.ipynb
2.two_layer_net/: 2.two_layer_net.ipynb  solver_sgd.py
2.two_layer_net/original/: 2.two_layer_net copy.ipynb  solver_sgd copy.py
3.optimal/: FullyConnectedNets copy.ipynb  FullyConnectedNets.ipynb
3.optimal/original/: FullyConnectedNets copy.ipynb
3.optimal/sources/: fc_net.py  layers.py
4.BatchNormalization+dropout/: BatchNormalization.ipynb  Dropout.ipynb
4.BatchNormalization+dropout/sources/: fc_net_with_norm_dropout.py  layers.py  layers_dropout.py  layers_norm.py  solver.py
4.normalization+dropout/: Dropout.ipynb
5.cnn/: ConvolutionalNetworks.ipynb
5.cnn/sources/: cnn.py  data_utils.py  fast_layers.py  im2col.py  im2col_cython.cp312-win_amd64.pyd  layers_cnn.py
6.rnn/: RNN_Captioning.ipynb
6.rnn/sources/: coco_utils.py  rnn.py  rnn_layers.py
7.lstm/: LSTM_Captioning.ipynb
7.lstm/sources/: image_utils.py  optim.py  rnn_layers.py
datasets_sh/: get_coco_captioning.sh
dl_utils/: __init__.py  cnn.py  coco_utils.py  fc_net.py  fc_net_with_norm_dropout.py  im2col.py  im2col_cython.c  layer_utils.py  layers.py  layers_cnn.py  layers_dropout.py  layers_norm.py  optim.py  rnn.py  rnn_layers.py
