[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "dl"
version = "0.1.0"
description = "Deep Learning Project with Utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "future>=1.0.0",
    "imageio>=2.37.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "tqdm>=4.67.1",
    "six",
    "cython>=3.1.0",
    "h5py>=3.13.0",
]
